CHANGES IN FLTK 1.3.3                                              RELEASED: MMM DD YYYY

	- Fixed recent MinGW build WRT configure not finding strcasecmp() (STR #2994).
	  Note: This fix is temporary and should be revisited later.
	- Fixed missing libdl dependency in CMake builds (STR #2977).
	- Fixed segfault in fl_set_fonts_xft.cxx when loading fonts not named
	  as expected (STR #2976).
	- Removed autoconf/configure and CMake tests and defines for
	  unused function strtoll().
	- Fixed access of protected member (STR #2903)
	- Implemented support for the Mac OS text input system that deals with character composition
	  and input of languages with large character sets (e.g., Chinese and Japanese). This
	  implementation has been reported to work well for Chinese. Superficial testing suggests
	  it's also operational for Japanese. In-depth testing remains needed though.
	- Mac OS version of Fl_Native_File_Chooser: when using filters in a save file dialog,
	  the output file extension gets changed when the user modifies the output file type.
	- Removed the now unused src/Fl_mac.cxx
	- Fixed various Mac specific opengl issues (STR #2944)
        - Added new method Fl_Widget::top_window() (STR #2948)
        - Added new method Fl_Widget::top_window_offset() (part of STR #2944)
	- Added ability to get notifications whenever the clipboard changes (STR#2636)
	  New methods:
	      Fl::add_clipboard_notify(Fl_Clipboard_Notify_Handler h, void *data = 0)
	      Fl::remove_clipboard_notify(Fl_Clipboard_Notify_Handler h)
        - Fl_Tree_Item: added four new public accessor methods:
	    label_x(), label_y(), label_w(), label_h().
	    (Useful for new item_draw_callback() ABI feature)

    1.3.3 ABI FEATURES
	  (To enable the following ABI features, put: #define FLTK_ABI_VERSION 10303
	  at the top of your FL/Enumerations.H and rebuild FLTK and your app)

	- Made Fl_Help_View::handle() public and Fl_Help_View::draw() protected